@@ -1,25 +1,27 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.3603
+# Note: this file was auto-generated by Module::Build::Compat version 0.4210
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
-          'NAME' => 'App::bk',
-          'VERSION_FROM' => 'lib/App/bk.pm',
-          'PREREQ_PM' => {
-                           'English' => 0,
-                           'File::Basename' => 0,
-                           'File::Copy' => 0,
-                           'File::Which' => 0,
-                           'FindBin' => 0,
-                           'Getopt::Long' => 0,
-                           'POSIX' => 0,
-                           'Pod::Usage' => 0,
-                           'Test::More' => '0.94',
-                           'Test::Trap' => 0
-                         },
-          'INSTALLDIRS' => 'site',
-          'EXE_FILES' => [
-                           'bin/bk'
-                         ],
-          'PL_FILES' => {}
-        )
+  'PL_FILES' => {},
+  'INSTALLDIRS' => 'site',
+  'NAME' => 'App::bk',
+  'EXE_FILES' => [
+                   'bin/bk'
+                 ],
+  'VERSION_FROM' => 'lib/App/bk.pm',
+  'PREREQ_PM' => {
+                   'Getopt::Long' => 0,
+                   'File::Copy' => 0,
+                   'English' => 0,
+                   'CPAN::Meta::Spec' => '2.13338',
+                   'Pod::Usage' => 0,
+                   'FindBin' => 0,
+                   'Test::Trap' => 0,
+                   'File::Which' => 0,
+                   'Test::More' => '0.94',
+                   'POSIX' => 0,
+                   'Module::Build' => '0.4003',
+                   'File::Basename' => 0
+                 }
+)
 ;
